Fix broken layout in Job info page

--- a/src/gams_bootstrap.scss
+++ b/src/gams_bootstrap.scss
@@ -185,7 +185,7 @@ body {
   color: #f39619;
 }
 
-table {
+.summary-table {
   font-size: 10pt;
   white-space: nowrap;
 }
